# Plonky3

./: Cargo.toml
circle/src/: pcs.rs
commit/src/: pcs.rs
field/src/extension/: binomial_extension.rs
fri/: Cargo.toml
fri-verifier-air/: Cargo.toml
fri-verifier-air/src/: air.rs  columns.rs  generation.rs  lib.rs
fri-verifier-air/tests/: integration_tests.rs  proof_generation_utils.rs
fri/src/: hiding_pcs.rs  two_adic_pcs.rs
fri/tests/: fri.rs
poseidon2-air/: Cargo.toml
recursion/: Cargo.toml
recursion/src/: lib.rs
recursion/src/air/: asic.rs  ext_alu_air.rs  fillable_cols.rs  mod.rs
recursion/src/air/alu/: air.rs  cols.rs
recursion/src/air/witness/: air.rs
recursion/src/chips/: asic.rs  merkle_tree.rs  mod.rs
recursion/src/chips/alu/: air.rs  cols.rs
recursion/src/chips/ext_alu/: air.rs  binomial_extension.rs  cols.rs  mod.rs
recursion/src/chips/witness/: air.rs
recursion/src/circuit_builder/: circuit_builder.rs  mod.rs
recursion/src/prover/: mod.rs  tables.rs
recursion/src/verifier/: circuit_verifier.rs  mod.rs  recursive_pcs.rs  recursive_traits.rs  simplified_recursive_pcs.rs
recursion/tests/: fibonacci.rs  simple_circuit.rs
symmetric/src/: compression.rs
uni-stark/: Cargo.toml
uni-stark-recursion/: Cargo.toml
uni-stark-recursion/src/: circuit_builder.rs
uni-stark-recursion/src/gates/: arith_gates.rs
uni-stark-recursion/tests/: simple_circuit.rs
uni-stark/src/: circuit_builder.rs  lib.rs  proof.rs  prover.rs  symbolic_builder.rs  verifier.rs
uni-stark/tests/: fib_air.rs  simple_circuit.rs
(+5 files in other folders)
